--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,11 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Hello Coursera!It's a great course! This is Vibhav<h1>
+<h1 style="colour: blue; text-align: centre;">Coursera!It's a great course! This is Vibhav!<h1>
+	<footer>
+		<p style="font-size: 20px"
+		onclick="alert('Hi this is Vibhav');">
+		Tech Support:click
+	</footer>
 </body>
 </html>
