--- a/site/index.html
+++ b/site/index.html
@@ -4,11 +4,25 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1 style="colour: blue; text-align: centre;">Coursera!It's a great course! This is Vibhav!<h1>
-	<footer>
-		<p style="font-size: 20px"
-		onclick="alert('Hi this is Vibhav');">
-		Tech Support:click
-	</footer>
+
+<h1 
+style="color: blue; text-align: center;"
+>
+	Hi Coursera
+	
+<h1>
+<h2
+	style="font-size: 40px" >
+	Hi yo
+	</h2>
+
+
+	
+		<p
+		style="text-align: center;"
+		onclick="alert('Contact me at vibhav2601@gmail');">
+		Tech support: Vibhav
+			
+		</p>
 </body>
 </html>
