--- a/site/Lecture4.html
+++ b/site/Lecture4.html
@@ -6,10 +6,18 @@
 	</title>
 </head>
 <body>
-	<p> 
-		
+	<div style="color: blue"> 
 		This is my website learned from coursera
-	</p>
+	</div>
+	<div>
+
+
+		I learned the following 
+		<ui>
+			<li>HTML5</li>
+			<li>Git controle</li>
+		</ui>
+	</div>
 
 </body>
 </html>
