--- a/site/link.html
+++ b/site/link.html
@@ -12,8 +12,9 @@
 	</p>
 		</h1>
 	<body>
-		<a href="http://www.facebook.com">Click here
+		<a href="http://www.facebook.com/mishu.agarwal2">Click here
 			
 		</a>
+		<a href="index.html">Click to go to home</a>
 	</body>	
 	</html>
