--- a/site/link.html
+++ b/site/link.html
@@ -15,6 +15,9 @@
 		<a href="http://www.facebook.com/mishu.agarwal2">Click here
 			
 		</a>
-		<a href="index.html">Click to go to home</a>
+		<a href="index.html">
+			<div>Click to go to home
+			</div>
+		</a>
 	</body>	
 	</html>
