--- a/site/link.html
+++ b/site/link.html
@@ -6,6 +6,10 @@
 	</head>
 
 	<h1>
+		<p>
+			Click to login Facebook or go to your logged in account
+			<a href="https://www.facebook.com/"></a>
+		</p>
 	<p style="color: blue; text-align: center;">
 		This will take you to my facebook wall
 		
@@ -15,6 +19,9 @@
 		<a href="http://www.facebook.com/mishu.agarwal2">Click here
 			
 		</a>
+		<div>
+			<a href="http://www.facebook.com/mishu.agarwal2" target="_blank">Click to open my facebook in a new tab</a>
+		</div>
 		<a href="index.html">
 			<div>Click to go to home
 			</div>
