Link to Facebook part of sote

--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,8 @@ style="color: blue; text-align: center;"
 <h1>
 <h2
 	style="font-size: 40px" >
-	Hi yo
+	Go to Facebook page
+	<a href="link.html"></a>
 	</h2>
 
 
