--- a/site/index.html
+++ b/site/index.html
@@ -13,8 +13,8 @@ style="color: blue; text-align: center;"
 <h1>
 <h2
 	style="font-size: 40px" >
-	Go to Facebook page
-	<a href="link.html"></a>
+	
+	<a href="link.html">Go to Facebook part of site</a>
 	</h2>
 
 
