--- a/site/index.html
+++ b/site/index.html
@@ -3,27 +3,28 @@
 <head>
 	<title>Hello Coursera!</title>
 </head>
-<body>
+<body style="background: url(https://wallpapercave.com/wp/wp2919081.jpg);background-repeat: no-repeat;background-size: 200% 300%">
 
-<h1 
-style="color: blue; text-align: center;"
->
-	Hi Coursera
-	
-<h1>
-<h2
-	style="font-size: 40px" >
-	
-	<a href="link.html">Go to Facebook part of site</a>
-	</h2>
+<h1 style="font-size: 40px; background-color:purple; color:black ">Welcome to the Home page</h1>
+ 		
+<style type="text/css"></style>
+ 		a:link{
+ 		
+ 	}
 
 
-	
-		<p
+
+	<ul>
+	<li><a href="link.html">Go to Facebook part of site</a></li>	
+	<li> <a href="bb.html">Gather information about Lucknow</a></li>
+
+	</ul>
+	<p
 		style="text-align: center;"
 		onclick="alert('Contact me at vibhav2601@gmail');">
 		Tech support: Vibhav
 			
 		</p>
+
 </body>
 </html>
