--- a/site/bb.html
+++ b/site/bb.html
@@ -2,32 +2,27 @@
 <html>
 <title>Lucknow</title>
 
-	<header style="color: white; font-size: 40px; text-align: center;background: orange">
+	<header style="color: black; font-size: 40px; text-align: center;background: orange; width: 800px">
 		Knowledge about the city Lucknow
 	</header>
+	<div style="background-color: #616587; height: 260px">
+		<section style="padding-top:50px ; text-align: left;">
+			<a style="color: black" href="https://en.wikipedia.org/wiki/Lucknow">
+				Link to wikipedia
+			</a>	
+
+		</section>
+		<h1 style="text-align: center;font-size: 20px; font: bold;">Introduction</h1>
+			<section style="color:black ">
+				Lucknow is the capital city of the Indian state of Uttar Pradeshand is also the administrative headquarters of the eponymous district and division. It is the eleventh most populous city and the twelfth most populous urban agglomeration of India. Lucknow has always been known as a multicultural city that flourished as a North Indian cultural and artistic hub, and the seat of power of Nawabs in the 18th and 19th centuries. It continues to be an important centre of governance, administration, education, commerce, aerospace, finance, pharmaceuticals, technology, design, culture, tourism, music and poetry.
+			</section>
+	</div>
 	
 
-
-	<br>
-
-
-
-   </br>
+<section style="background-color:#c0cac3; height: 200px">
+	<h2>
 		
-<section>
-<a href="https://en.wikipedia.org/wiki/Lucknow">
-	Link to wikipedia
-</a>	
-</section>
-<p></p>
-
-
-<h1 style="text-align: center;font-size: 20px; font: bold;">Introduction</h1>
-<section>
-	Lucknow is the capital city of the Indian state of Uttar Pradeshand is also the administrative headquarters of the eponymous district and division. It is the eleventh most populous city and the twelfth most populous urban agglomeration of India. Lucknow has always been known as a multicultural city that flourished as a North Indian cultural and artistic hub, and the seat of power of Nawabs in the 18th and 19th centuries. It continues to be an important centre of governance, administration, education, commerce, aerospace, finance, pharmaceuticals, technology, design, culture, tourism, music and poetry.
-</section>
-<section>
-	
+	</h2>
 </section>
 
 </html>
