--- a/site/index.html
+++ b/site/index.html
@@ -2,23 +2,46 @@
 <html>
 <head>
 	<title>Hello Coursera!</title>
+
 </head>
 <body style="background: url(https://wallpapercave.com/wp/wp2919081.jpg);background-repeat: no-repeat;background-size: 200% 300%">
 
 <h1 style="font-size: 40px; background-color:purple; color:black ">Welcome to the Home page</h1>
  		
-<style type="text/css"></style>
- 		a:link{
- 		
- 	}
+<style type="text/css">
+	header li{
+		list-style: none;
+	}
+	a:link {
+		text-decoration: underline;
+		background-color: orange;
+		border: 1px solid green;
+		margin-bottom: 10px;
+		display: block;
+		width: 300px;
 
+	}
+	a:active, a:hover{
+		background-color: yellow;
+		padding: 3px;
+		font-family: sans-serif;
 
+	}
+</style>
+ <style type="text/css">
+ 	.dropbtn{
+	background-color: yellow;
+}
 
+ </style>		
+
+<header>
 	<ul>
 	<li><a href="link.html">Go to Facebook part of site</a></li>	
 	<li> <a href="bb.html">Gather information about Lucknow</a></li>
 
 	</ul>
+</header>
 	<p
 		style="text-align: center;"
 		onclick="alert('Contact me at vibhav2601@gmail');">
