--- a/site/link.html
+++ b/site/link.html
@@ -1,33 +1,46 @@
 	<!doctype html>
 	<!DOCTYPE html>
 	<html>
-	<head>
+	<h1 style="text-align: center;">
+		Facebook 
+	</h1>
+	<body style="background: url(https://wallpapercave.com/wp/wp2919081.jpg);background-repeat: no-repeat;background-size: 200% 300%">
+
+	<head >
 		<title>Link to my Faceook</title>
 	</head>
+	<style type="text/css">
+		section div:nth-child(2)
+		{
+			color: blue;
+			font-size: 20px;
+			border: 1px solid blue;
+			background-color: red;
+			width: 300px;	
+			display: block;
 
-	<h1>
+
+		}
+	</style>
+	<section>
 		<p>
-			Click to login Facebook or go to your logged in account
-			<a href="https://www.facebook.com/"></a>
-		</p>
-	<p style="color: blue; text-align: center;">
-		This will take you to my facebook wall
-		
-	</p>
-		</h1>
-	<body>
-		<a href="http://www.facebook.com/mishu.agarwal2">Click here
 			
-		</a>
+			<a href="https://www.facebook.com/">Click to login Facebook or go to your logged in account</a>
+		</p>
+	
+		
+		<div>	
+		<a href="http://www.facebook.com/mishu.agarwal2">Click here to go to Vibhav's wall</a>
+		</div>
 		<div>
 			<div>
 				<img src="20180322_155713.jpg" width="400" height="380">
 			</div>
 			<a href="http://www.facebook.com/mishu.agarwal2" target="_blank">Click to open my facebook in a new tab</a>
 		</div>
-		<a href="index.html">
-			<div>Click to go to home
-			</div>
+		<a style="background-color: green" href="index.html">
+			Click to go home
 		</a>
+	</section>
 	</body>	
 	</html>
