--- a/site/buttons.html
+++ b/site/buttons.html
@@ -4,28 +4,41 @@
 
 	<title>buttons</title>
 	<style type="text/css">
+		*{
+			box-sizing: border-box;
+		}
 		.but {
 			font-family: Times new roman, sans-serif;
-			font-weight: 120px;
+			
 			font-style: italic;
 			background-color: #90EE90;
-			width: 140px;
-			text-align: center;
+			width: 40%;
+			float: left;
 			
+			
+			}
+		.butt{
+			background-color: ;
+			padding: 10px;
+			margin: 20px;
 
 		}
-		.butt{
-			background-color: #1a5952;
-			padding: 10px;
-			margin-left:300px;
-			width: 140px;
+		.b{
+			float: left;
+			width: 40%;
+			margin: 10px;
 		}
 
 	</style>
+	<body style="background-color: maroon;">
 	<div class="butt">
-	 <div class="but">
-	 	Hi nigga click here
-	 </div>
 	</div>
-
+	 <p class="but">
+	 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor augue, fermentum a magna non, laoreet gravida leo. Nunc sit amet velit tristique, dictum diam id, dapibus erat. Praesent placerat mauris purus, vel lobortis diam vehicula feugiat. Curabitur laoreet ante leo, a porta ipsum maximus quis. Mauris ac sagittis velit. Proin velit tortor, elementum a ante eu, accumsan iaculis nunc. Phasellus fringilla diam sit amet nisl gravida, at faucibus nulla aliquam. Integer eros velit, sodales in turpis at, viverra tempus erat.
+	 </p>
+	 <p class="b">
+	 	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent tortor augue, fermentum a magna non, laoreet gravida leo. Nunc sit amet velit tristique, dictum diam id, dapibus erat. Praesent placerat mauris purus, vel lobortis diam vehicula feugiat. Curabitur laoreet ante leo, a porta ipsum maximus quis. Mauris ac sagittis velit. Proin velit tortor, elementum a ante eu, accumsan iaculis nunc. Phasellus fringilla diam sit amet nisl gravida, at faucibus nulla aliquam. Integer eros velit, sodales in turpis at, viverra tempus erat.
+	 </p>
+	
+</body>
 </html>
