--- a/site/index.html
+++ b/site/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="background: url(https://wallpapercave.com/wp/wp2919081.jpg);background-repeat: no-repeat;background-size: 200% 300%">
 
-<h1 style="font-size: 40px; background-color:purple; color:black ">Welcome to the Home page</h1>
+<h1 style="font-size: 40px; background-color:purple; color:black; height:100px ">Welcome to the Home page</h1>
  		
 <style type="text/css">
 	header li{
