--- a/site/davidmenu.html
+++ b/site/davidmenu.html
@@ -30,7 +30,7 @@
   		</a>
   				<p style="font-size: 15px; margin-top: -10px;">
   					<img src="kosher.jpg">
-  					Kosher certified
+  					Kosher's certified
   				</p>
   			</div>
   		
