--- a/site/index.html
+++ b/site/index.html
@@ -39,6 +39,7 @@
 	<ul>
 	<li><a href="link.html">Go to Facebook part of site</a></li>	
 	<li> <a href="bb.html">Gather information about Lucknow</a></li>
+	<li><a href="davidmenu.html">David Chu's Chinese Bistro</a></li>
 
 	</ul>
 </header>
