--- a/site/davidmenu.html
+++ b/site/davidmenu.html
@@ -3,8 +3,9 @@
 <head>
 	<title>David Chu's bistro</title>
 	<meta charset="utf-8">
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device width, initial scale=1">
-	<link rel="stylesheet" type="text/css" href="css/bootsrap2.min.css">
+	<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="davidstyle.css">
 
 </head>
@@ -33,15 +34,75 @@
   					Kosher's certified
   				</p>
   			</div>
-  		
+  			<div class="btn btn-default pull-right" type="button" >
+			<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				Dropwdown Menu
+				<span class="caret"></span>
+			</button>
+
+			<ul class="dropdown-menu">
+				<li>Link1</li>
+				<li>Link2</li>
+
+			</ul>
+			</div>
+			
+  		<div class="btn pull-right visible-lg visible-md hidden xs"  >
+			<button type="button" class="btn btn-default">
+				<a href="menudish.html">Menu</a>
+			</button>
+			<button type="button">
+				<a href="info.html">Information</a>
+			</button>
+		</div>
+
   		</div>
     </div>
+
 </div>
 </nav>
 </header>
 <div id="restphoto">
 	<img src="restphoto.jpg" width="1000px" height="500px">
 </div>
+<div id="dish">
+	<img src="dish1.jpg" height="200px" width="300px">
+</div>
+<div id="dish">
+	<img src="dish2.jpg" height="200px" width="300px">
+</div>
+<div>
+	
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+</head>
+
+
+<div class="container">
+  <h2>Dropdowns</h2>
+  <p>Add the .dropdown-menu-right class to .dropdown-menu to right-align the dropdown menu:</p>
+  <div class="dropdown">
+    <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Dropdown Example
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu ">
+      <li><a href="#">HTML</a></li>
+      <li><a href="#">CSS</a></li>
+      <li><a href="#">JavaScript</a></li>
+      <li class="divider"></li>
+      <li><a href="#">About Us</a></li>
+    </ul>
+  </div>
+</div>
+-->
+
+
+
+</div>
+
 <script src="js/jquery-2.1.4.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script src="js/davidscript.js"></script>
