--- a/site/ex.html
+++ b/site/ex.html
@@ -28,9 +28,9 @@
   background-color:white;
   
 }
-#restphoto{
-  margin-left: 180px;
-}
+
+
+
 #dish{
   float: left;
   margin-left: 180px;
@@ -80,14 +80,14 @@ body{
   padding: 16px;
 }
 }
-@media(max-height: 992px;)
+@media(max-height: 992px; max-width: 1000px)
 {
 
 }
 </style>
 <body>
 
-  <nav class="navbar navbar-default" style="background-color: yellow; height: 150px;">
+  <nav class="navbar navbar-default " style="background-color: yellow; height: 150px; width: ">
      <div style="margin-top: 5px; float: left;">
     
         <div>
@@ -165,7 +165,7 @@ body{
 </nav>
 
 </body>
-<div id="restphoto">
+<div id="restphoto" style="margin-left: 140px; margin-top: 60px;">
   <img src="restphoto.jpg" width="1000px" height="500px">
 </div>
 <div id="dish">
