--- a/site/sushrut.html
+++ b/site/sushrut.html
@@ -51,29 +51,64 @@
 <h1 id="h1">
 	Sushrut Hospital,Maternity and Trauma Centre
 </h1>
-  <div class="dropdown visible-md visible-lg" id="but" style="margin-left: 40px">
-		  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton drp" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		    Dropdown button
-		  </button>
-		  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-		    <a class="dropdown-item" href="#">Action</a>
-		    <a class="dropdown-item" href="#">Another action</a>
-		    <a class="dropdown-item" href="#">Something else here</a>
-		  </div>
-		  </div>
-		   <div class="dropdown visible-md visible-lg pul" id="but" >
-		  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton drp" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		    Dropdown button
-		  </button>
-		  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-		    <a class="dropdown-item" href="#">Action</a>
-		    <a class="dropdown-item" href="#">Another action</a>
-		    <a class="dropdown-item" href="#">Something else here</a>
-		  </div>
-		  </div>
+
+
+<div>
+	<button class="btn btn-secondary" type="button" id="boxes">
+	HI
+</button>
+</div>
+<div>
+	<button class="btn btn-secondary" type="button" id="boxes">
+	HI
+</button>
+</div>
+<div >
+	<button class="btn btn-secondary" type="button" id="boxes">
+	HI
+</button>
+</div>
+
 <section id="content">
-	Lucknow is the capital city of the Indian state of Uttar Pradeshand is also the administrative headquarters of the eponymous district and division. It is the eleventh most populous city and the twelfth most populous urban agglomeration of India. Lucknow has always been known as a multicultural city that flourished as a North Indian cultural and artistic hub, and the seat of power of Nawabs in the 18th and 19th centuries. It continues to be an important centre of governance, administration, education, commerce, aerospace, finance, pharmaceuticals, technology, design, culture, tourism, music and poetry.
+	Lucknow is the capital city of the Indian state of Uttar Pradeshand is also the administrative headquarters of the eponymous district and division. It is the eleventh most populous city and the twelfth most populous urban agglomeration of India. Lucknow has always been known as a multicultural city that cl flourished as a North Indian cultural and artistic hub, and the seat of power of Nawabs in the 18th and 19th centuries. It continues to be an important centre of governance, administration, education, commerce, aerospace, finance, pharmaceuticals, technology, design, culture, tourism, music and poetry.
+	The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors
+	<div class="rescon">
+	Lucknow is the capital city of the Indian state of Uttar Pradeshand is also the administrative headquarters of the eponymous district and division. It is the eleventh most populous city and the twelfth most populous urban agglomeration of India. Lucknow has always been known as a multicultural city that cl flourished as a North Indian cultural and artistic hub, and the seat of power of Nawabs in the 18th and 19th centuries. It continues to be an important centre of governance, administration, education, commerce, aerospace, finance, pharmaceuticals, technology, design, culture, tourism, music and poetry.
+	The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.		
+	</div>
 </section>
+	<div>
+	<div id="doc-img">
+		<img src="doc-img.jpeg">
+	</div>
+	<div style="width: 600px;">
+		Lucknow is the capital city of the Indian state of Uttar Pradeshand is also the administrative headquarters of the eponymous district and division. It is the eleventh most populous city and the twelfth most populous urban agglomeration of India. Lucknow has always been known as a multicultural city that cl flourished as a North Indian cultural and artistic hub, and the seat of power of Nawabs in the 18th and 19th centuries. 
+
+	</div>
+	
+	
+	</div>
+	<div style="float: right; margin-top: -250px;">
+		
+		
+		<img src="doc-img.jpeg" style="margin-left: -450px;">
+		<div style="width: 200px; margin-top: -250px;" >
+			It is the eleventh most populous city and the twelfth most populous urban agglomeration of India. Lucknow has always been known as a multicultural city that cl flourished as a North Indian cultural and artistic hub, and the seat of power of Nawabs in the 18th and 19th centuries. 
+		</div>
+	</div>
+
+<section id="content">
+	But, she said, it clearly shows “the importance of childhood education, which is really having its moment right now.”
+	Natural experiment
+	The economists’ study was brought to you, so to speak, by the letters U, H and F.
+	“Sesame Street” debuted in 1969 with a diverse cast of humans and brightly colored fuzzy Muppets, including Oscar the Grouch, Bert and Ernie, and, of course, Big Bird. It was the country’s first explicitly educational children’s program, and it was an immediate hit: In the early 1970s, one-third of all American toddlers watched it.
+	That’s a Super Bowl-level audience share. But it’s even more striking because another third of the nation’s toddlers couldn’t have watched the show if they wanted to — they didn’t have the right antenna to tune in to their local public television station.
+	This was well before the popularization of cable. TV broadcasts arrived over the air, on two different kinds of signals. The higher-quality signal was known as VHF, or Channels 1 to 13 on a standard TV set. The lower-quality signal was called UHF, and many households at that time were unable to tune it in. By a quirk of federal licensing, the public broadcasting channels in many major cities, including New York and Boston, aired on VHF channels, while others, including Los Angeles and Washington, aired on UHF.
+	As a result, about two-thirds of the nation’s households were able to watch “Sesame Street.” The other third weren’t.
+	Levine read about that divide in early 2014. He realized it was the sort of rare natural experiment that economists live for — two groups of people, divvied up by fate and the Federal Communications Commission, who could be compared over time to see whether there was a difference in their educational outcomes.
+	
+</section>
+
 </body>
 </html>
 		
