--- a/site/zb.html
+++ b/site/zb.html
@@ -37,7 +37,7 @@ function closeNav() {
 }
 </script>
   <h1 id="navhead">
-  	Zaurat Bank
+  	Zarurat Bank
   </h1>
   <div class="pull-right" id="logo">
   	<img src="https://scontent.flko3-1.fna.fbcdn.net/v/t1.0-9/22045616_357891344639208_8210379323339789418_n.jpg?_nc_cat=110&_nc_oc=AQmPtQyaoVOOpCrzY8KoeSI7vRysZJVDpqbdjBVP-USeFc3byKl1_tkqRYFPy8PofaNAmAKadkock4uVWzEhOfPt&_nc_ht=scontent.flko3-1.fna&oh=06ea00448b794e21a51916d39e6926f9&oe=5DC80C32" style="height: 90px"  width="90px">
@@ -51,10 +51,45 @@ function closeNav() {
     </div>
 
 </div>
-<div id="box">
-  
-</div>
+<h1 id="headcont">
+  How we work
+  </h1>
+<section id="sec1">
+  The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
+  The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors. 
+</section>
+
+<h1 id="headcont">
+  How we were founded
+</h1>
+<section id="sec1">
+  The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
+  The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors. 
+</section>
+
+
 </body>
+<div id="foot">
+    <div id="map">
+      <script>
+
+  function initMap() {
+
+    var uluru = {lat: 26.855829, lng: 80.936270};
+
+    var map = new google.maps.Map(
+        document.getElementById('map'), {zoom: 4, center: uluru});
+    
+    var marker = new google.maps.Marker({position: uluru, map: map});
+  }
+      </script>
+      
+      <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2dzAbp0-RHZtJcojXwzYKUWP3oJm0BII&callback=initMap">
+      </script>
+    </div>
+</div>
+
 </html>
 
 
