--- a/site/zb.html
+++ b/site/zb.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Zarurat Bank</title>
+  <link rel="shortcut icon" href="zb.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -66,11 +67,25 @@ function closeNav() {
   The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
   The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors. 
 </section>
-
-
-</body>
 <div id="foot">
-    <div id="map">
+  <h1 id="fc">
+    Contact Us
+  </h1>
+  <div id="fc">
+    <li>
+      Anup Aagrwal
+    </li>
+    <li>
+      Beena Goel
+    </li>
+    <li>
+      Parul Agarwal
+    </li>
+  </div>
+
+
+
+  <div id="map">
       <script>
 
   function initMap() {
@@ -89,6 +104,11 @@ function closeNav() {
       </script>
     </div>
 </div>
+</body>
+
+<fo
+
+
 
 </html>
 
