--- a/site/contact.html
+++ b/site/contact.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Zarurat Bank</title>
-  <link rel="shortcut icon" href="zb.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Contact, Donate or become a member</title>
+	<link rel="shortcut icon" href="zb.ico" />
+</head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="zb.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+`<link rel="stylesheet" type="text/css" href="contact.css">
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -16,7 +19,7 @@
 <nav class="navbar navbar-default" id="navbb">
   <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
- <a href="zb.html">Home</a>
+  <a href="zb.html">Home</a>
   <a href="#">About us and our activities</a>
   <a href="contact.html">Donate or Become a member</a>
 </div>
@@ -37,37 +40,45 @@ function closeNav() {
   document.getElementById("main").style.marginLeft= "0";
 }
 </script>
+<a href="zb.html">
   <h1 id="navhead">
   	Zarurat Bank
   </h1>
+</a>
   <div class="pull-right" id="logo">
   	<img src="https://scontent.flko3-1.fna.fbcdn.net/v/t1.0-9/22045616_357891344639208_8210379323339789418_n.jpg?_nc_cat=110&_nc_oc=AQmPtQyaoVOOpCrzY8KoeSI7vRysZJVDpqbdjBVP-USeFc3byKl1_tkqRYFPy8PofaNAmAKadkock4uVWzEhOfPt&_nc_ht=scontent.flko3-1.fna&oh=06ea00448b794e21a51916d39e6926f9&oe=5DC80C32" style="height: 90px"  width="90px">
   </div>
 
 </nav>
 
-<div id="cont">
-    <div id="cont1">
-      We are a Non-Governmental Organization based in Lucknow. We collect clothes which can be deposited at our hotspots and then distribute it to the needy once a month.  
-    </div>
+<div id="inputgrp">
+	<form>
+		Name: <br>
+		<input type="text" name="name" placeholder="Your name">
+		<br>
+		Purpose:<br>
+		<select>
+			<option value="donate">Donate Clothes</option>
+			<option value="member">Become a Member</option>
+		</select>
+		<br>
+		Phone number:
+		<input type="text" name="phno" placeholder="Your Phone number">
+		<br>
+		Email id:
+		<input type="text" name="Email" placeholder=" Your email-id">
+		<br>
+		<input type="submit" value="Submit" style="margin-bottom: 10px;">
 
+
+	</form>
 </div>
-<h1 id="headcont">
-  How we work
-  </h1>
-<section id="sec1">
-  The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
-  The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors. 
-</section>
 
-<h1 id="headcont">
-  How we were founded
-</h1>
-<section id="sec1">
-  The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
-  The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors. 
-</section>
+
+<a href="https://www.facebook.com/zaruratbank/" class="fa fa-facebook" style="margin-left: 40%; margin-right: 40px;"></a>
+<a href="#" class="fa fa-twitter"></a>
 <div id="foot">
+
   <h1 id="fc">
     Contact Us
   </h1>
@@ -105,12 +116,4 @@ function closeNav() {
     </div>
 </div>
 </body>
-
-<fo
-
-
-
 </html>
-
-
-
