--- a/site/zb.html
+++ b/site/zb.html
@@ -49,6 +49,11 @@ function closeNav() {
 <div id="cont">
     <div id="cont1">
       We are a Non-Governmental Organization based in Lucknow. We collect clothes which can be deposited at our hotspots and then distribute it to the needy once a month.  
+      <br>
+      <a href="contact.html">
+        <button class="button" style="margin-left: 30%; border-radius: 20%;">Donate</button>
+      </a>
+      
     </div>
 
 </div>
