--- a/site/zb.html
+++ b/site/zb.html
@@ -40,7 +40,7 @@ function closeNav() {
   <h1 id="navhead">
   	Zarurat Bank
   </h1>
-  <div class="pull-right" id="logo">
+  <div style="float: right;" id="logo">
   	<img src="https://scontent.flko3-1.fna.fbcdn.net/v/t1.0-9/22045616_357891344639208_8210379323339789418_n.jpg?_nc_cat=110&_nc_oc=AQmPtQyaoVOOpCrzY8KoeSI7vRysZJVDpqbdjBVP-USeFc3byKl1_tkqRYFPy8PofaNAmAKadkock4uVWzEhOfPt&_nc_ht=scontent.flko3-1.fna&oh=06ea00448b794e21a51916d39e6926f9&oe=5DC80C32" style="height: 90px"  width="90px">
   </div>
 
@@ -51,7 +51,7 @@ function closeNav() {
       We are a Non-Governmental Organization based in Lucknow. We collect clothes which can be deposited at our hotspots and then distribute it to the needy once a month.  
       <br>
       <a href="contact.html">
-        <button class="button" style="margin-left: 30%; border-radius: 20%;">Donate</button>
+        <button class="button" style="margin-left: 20%; border-radius: 20%;">Donate</button>
       </a>
       
     </div>
