--- a/site/activities.html
+++ b/site/activities.html
@@ -1,1 +1,112 @@
 
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>Contact, Donate or become a member</title>
+	<link rel="shortcut icon" href="zb.ico" />
+</head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+`<link rel="stylesheet" type="text/css" href="contact.css">
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<body style="background: url(bggg.jpg); background-repeat: no-repeat; background-attachment: fixed;">
+
+<nav class="navbar navbar-default" id="navbb">
+  <div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a href="zb.html">Home</a>
+  <a href="#">About us and our activities</a>
+  <a href="contact.html">Donate or Become a member</a>
+</div>
+
+<div id="main">
+  
+  <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
+</div>
+
+<script>
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft= "0";
+}
+</script>
+<a href="zb.html">
+  <h1 id="navhead">
+  	Zarurat Bank
+  </h1>
+</a>
+  <div class="pull-right" id="logo">
+  	<img src="https://scontent.flko3-1.fna.fbcdn.net/v/t1.0-9/22045616_357891344639208_8210379323339789418_n.jpg?_nc_cat=110&_nc_oc=AQmPtQyaoVOOpCrzY8KoeSI7vRysZJVDpqbdjBVP-USeFc3byKl1_tkqRYFPy8PofaNAmAKadkock4uVWzEhOfPt&_nc_ht=scontent.flko3-1.fna&oh=06ea00448b794e21a51916d39e6926f9&oe=5DC80C32" style="height: 90px"  width="90px">
+  </div>
+
+</nav>
+
+
+<div id="marginact">
+	<img src="zb1.jpg" height="300px;" width="600px" style="float: left;"> 
+	<div id=image-text>
+		e research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
+	</div>
+</div>
+<div id="marginact">
+	<img src="zb2.jpg" height="300px;" width="600px" style="float: left;" > 
+	<div id=image-text>
+		e research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
+	</div>
+</div><div id="marginact">
+	<img src="zb3.jpg" height="300px;" width="600px" style="float: left;"> 
+	<div id=image-text>
+		e research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
+	</div>
+</div>
+<!-- <div id="foot">
+
+  <h1 id="fc">
+    Contact Us
+  </h1>
+  <div id="fc">
+    <li>
+      Anup Aagrwal
+    </li>
+    <li>
+      Beena Goel
+    </li>
+    <li>
+      Parul Agarwal
+    </li>
+  </div>
+  <a href="https://www.facebook.com/zaruratbank/" class="fa fa-facebook" style="margin-left: 40%; margin-right: 40px;"></a>
+
+
+
+
+  <div id="map">
+      <script>
+
+  function initMap() {
+
+    var uluru = {lat: 26.855829, lng: 80.936270};
+
+    var map = new google.maps.Map(
+        document.getElementById('map'), {zoom: 4, center: uluru});
+    
+    var marker = new google.maps.Marker({position: uluru, map: map});
+  }
+      </script>
+      
+      <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2dzAbp0-RHZtJcojXwzYKUWP3oJm0BII&callback=initMap">
+      </script>
+    </div>
+</div> -->
