--- a/site/activities.html
+++ b/site/activities.html
@@ -15,7 +15,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<body style="background: url(bggg.jpg); background-repeat: no-repeat; background-attachment: fixed;">
+<body style="background: url(bggg.jpg); background-repeat: no-repeat; background-attachment: fixed; width: auto; height: 100%;" >
 
 <nav class="navbar navbar-default" id="navbb">
   <div id="mySidenav" class="sidenav">
@@ -54,23 +54,24 @@ function closeNav() {
 
 
 <div id="marginact">
-	<img src="zb1.jpg" height="300px;" width="600px" style="float: left;"> 
+	<img src="zb1.jpg" style="float: left; " id="img-act"> 
 	<div id=image-text>
 		e research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
 	</div>
 </div>
 <div id="marginact">
-	<img src="zb2.jpg" height="300px;" width="600px" style="float: left;" > 
-	<div id=image-text>
+	<img src="zb2.jpg"  style="float: left;" id="img-act" > 
+	<div id="image-text2">
 		e research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
 	</div>
-</div><div id="marginact">
-	<img src="zb3.jpg" height="300px;" width="600px" style="float: left;"> 
+</div>
+<div id="marginact">
+	<img src="zb3.jpg"  style="float: left;" id="img-act"> 
 	<div id=image-text>
 		e research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
 	</div>
 </div>
-<!-- <div id="foot">
+<div id="foot">
 
   <h1 id="fc">
     Contact Us
@@ -109,4 +110,4 @@ function closeNav() {
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2dzAbp0-RHZtJcojXwzYKUWP3oJm0BII&callback=initMap">
       </script>
     </div>
-</div> -->
+</div>
