--- a/site/zb.html
+++ b/site/zb.html
@@ -17,7 +17,7 @@
   <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
  <a href="zb.html">Home</a>
-  <a href="#">About us and our activities</a>
+  <a href="activities.html">About us and our activities</a>
   <a href="contact.html">Donate or Become a member</a>
 </div>
 
@@ -61,8 +61,7 @@ function closeNav() {
   How we work
   </h1>
 <section id="sec1">
-  The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors.
-  The research can’t say whether the show continues to deliver such high benefits to children, said Diane Whitmore Schanzenbach, an economist at Northwestern University’s School of Education and Social Policy, who has read drafts of the paper and given feedback to the authors. 
+ We work with your help. We collect clothes in a tidy condition,get them washed,seal them and distribute it twice a month. 
 </section>
 
 <h1 id="headcont">
