--- a/site/contact.html
+++ b/site/contact.html
@@ -65,7 +65,7 @@ function closeNav() {
 		Phone number:
 		<input type="text" name="phno" placeholder="Your Phone number">
 		<br>
-		Email id:
+		Email Id:
 		<input type="text" name="Email" placeholder=" Your email-id">
 		<br>
 		<input type="submit" value="Submit" style="margin-bottom: 10px;">
@@ -75,7 +75,8 @@ function closeNav() {
 </div>
 
 
-<a href="https://www.facebook.com/zaruratbank/" class="fa fa-facebook" style="margin-left: 40%; margin-right: 40px;"></a>
+<a href="https://www.facebook.com/zaruratbank/" class="fa fa-facebook" style="
+-left: 40%; margin-right: 40px;"></a>
 <a href="#" class="fa fa-twitter"></a>
 <div id="foot">
 
