--- a/site/zb.html
+++ b/site/zb.html
@@ -51,7 +51,7 @@ function closeNav() {
       We are a Non-Governmental Organization based in Lucknow. We collect clothes which can be deposited at our hotspots and then distribute it to the needy once a month.  
       <br>
       <a href="contact.html">
-        <button class="button" style="margin-left: 20%; border-radius: 20%;">Donate</button>
+        <button class="button" id="buttonn">Donate</button>
       </a>
       
     </div>
