--- a/site/activities.html
+++ b/site/activities.html
@@ -17,7 +17,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 <body id="bodyact"  style="background-color: black;">
 
-<nav class="navbar navbar-default" id="navbb">
+<nav class="navbar navbar-default" id="navbb" style="width: 98%">
   <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a href="zb.html">Home</a>
