--- a/site/bb.html
+++ b/site/bb.html
@@ -1,7 +1,7 @@
 <doctype html>
 <html>
 <title>Lucknow</title>
-
+	<script type="text/javascript" src="r.js"></script>
 	<header style="color: black; font-size: 40px; text-align: center;background: orange; width: 800px">
 		Knowledge about the city Lucknow
 	</header>
