--- a/site/sush.html
+++ b/site/sush.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <link href='https://fonts.googleapis.com/css?family=Be Vietnam' rel='stylesheet'>
-	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="sush.css">
 
@@ -11,30 +11,35 @@
 	<head>
 	<title>Sushrut Hospital</title>
 </head>
-<nav id="navbar" style="background-color: #253CC2;">
+<nav id="navbar" >
 	<div>Sushrut Hospital</div>
 
-	<img src="logosus.jpg" style="float: right;border-radius: 50%; max-height: 60px; max-width: 70px; margin-left: 50px; margin-top: -50px;">		
+	<img src="logosus.jpg" style="float: left;border-radius: 50%; max-height: 60px; max-width: 70px; margin-top: -50px;">		
 	
 
 </nav>
-
-<body >
+<div id="hh">
+	<div style="padding-top:200px; padding-left: 200px; font-size: 50px; font-weight: 4px; font-style: bold; color: white;">What makes us better, <br> makes you better.</div>	
 	<div>
-	<img src="bg.png" id="mainphoto">
-	<div id="introtext">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-
-	Why do we use it?
-	It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
-		
-	</div>
-	</div>
-<div>
 	<button class="button button1" id="buttonid" style="margin-left: 10%;">Appointments</button>
 	<button class="button button1" id="buttonid">Get in touch</button>
 	<button class="button button1" id="buttonid">Services Offered</button>
-	<button class="button button1" id="buttonid">About</button>
+	<button class="button button1" id="buttonid" >About</button>
 </div>
+</div>
+<br>
+<body>
+<div style="margin-top: -35px;">
+	<img src="bg.png" id="mainphoto">
+	<div id="introtext">
+		<h2>About us</h2>
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+
+	
+		
+	</div>
+</div>
+
 <div>
 	<h1 id="choose"><button id="headbutton">Why choose Sushrut Hospital?	</button></h1>
 	<div id="contentboxx">
@@ -56,5 +61,29 @@
 		At Sushrut Hospital, every aspect of your care is coordinated to provide exactly the care you need. What might take months elsewhere can often be done in days here.
 	</div>
 </div>
+<br>
+<div id="foot">
+	Contact
+	  <div id="map">
+      <script>
+
+  function initMap() {
+
+    var uluru = {lat: 26.855829, lng: 80.936270};
+
+    var map = new google.maps.Map(
+        document.getElementById('map'), {zoom: 4, center: uluru});
+    
+    var marker = new google.maps.Marker({position: uluru, map: map});
+  }
+      </script>
+      
+      <script async defer
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD2dzAbp0-RHZtJcojXwzYKUWP3oJm0BII&callback=initMap">
+      </script>
+    </div>
+</div>
+</body>
+</html>
 </body>
 </html>
